Updated included documentation

--- a/cfg/sourcemod/ultimate-mapchooser.cfg
+++ b/cfg/sourcemod/ultimate-mapchooser.cfg
@@ -43,6 +43,11 @@ sm_umc_extend_display "0"
 // Maximum: "1.000000"
 sm_umc_logging_verbose "0"
 
+// String to replace the {NOMINATED} map display-template string with.
+// -
+// Default: "^"
+sm_umc_nomination_display "^"
+
 // Determines whether slots in runoff votes should be blocked. This value is ignored if the original vote didn't have blocked slots.
 // -
 // Default: "1"
