--- a/cfg/sourcemod/umc-endvote.cfg
+++ b/cfg/sourcemod/umc-endvote.cfg
@@ -20,6 +20,16 @@ sm_umc_endvote_adminflags ""
 // Maximum: "1.000000"
 sm_umc_endvote_allowduplicates "1"
 
+// When to change the map after a successful vote:
+//  0 - Instant,
+//  1 - Round End,
+//  2 - Map End
+// -
+// Default: "2"
+// Minumum: "0.000000"
+// Maximum: "2.000000"
+sm_umc_endvote_changetime "2"
+
 // File to use for Ultimate Mapchooser's map rotation.
 // -
 // Default: "umc_mapcycle.txt"
