--- a/cfg/sourcemod/umc-rockthevote.cfg
+++ b/cfg/sourcemod/umc-rockthevote.cfg
@@ -60,6 +60,16 @@ sm_umc_rtv_endsound ""
 // Default: ""
 sm_umc_rtv_enteradminflags ""
 
+// The amount of entrance votes to be given to players who have at least one of the admin flags specified by "sm_umc_rtv_enteradminflags_bonusflags".
+// -
+// Default: ""
+sm_umc_rtv_enteradminflags_bonusamt "2"
+
+// If specified, players with any of these admin flags will be given bonus RTV entrance votes, of the amount determined by "sm_umc_rtv_enteradminflags_bonusamt".
+// -
+// Default: ""
+sm_umc_rtv_enteradminflags_bonusflags ""
+
 // Specifies what action to take if the vote doesn't reach the set theshold.
 //  0 - Do Nothing,
 //  1 - Perform Runoff Vote
