Updated UMC plugins to version 3.5.0 which has been compiled on SM 1.7.3.
Signed-off-by: Mr.Silence

--- a/cfg/sourcemod/ultimate-mapchooser.cfg
+++ b/cfg/sourcemod/ultimate-mapchooser.cfg
@@ -22,6 +22,15 @@ sm_umc_countdown_sound ""
 // Maximum: "1.000000"
 sm_umc_dontchange_display "0"
 
+// Determines where in votes the nominated maps will be displayed.
+//  0 - Bottom,
+//  1 - Top
+// -
+// Default: "0"
+// Minimum: "0.000000"
+// Maximum: "1.000000"
+sm_umc_nomination_display "1"
+
 // Specifies a server command to be executed when the map is extended by UMC.
 // -
 // Default: ""
