Fixed nomination display bug umc-core where it would not always display at the top. Updated configuration files.
Signed-off-by: Mr.Silence

--- a/cfg/sourcemod/umc-adminmenu.cfg
+++ b/cfg/sourcemod/umc-adminmenu.cfg
@@ -11,7 +11,7 @@
 // Flags required for admins to be able to manually select settings for the vote. If the admin does not have the proper priveleges, the vote will automatically use the cvars in this file. If empty, all admins have access.
 // -
 // Default: ""
-sm_umc_am_adminflags_default ""
+sm_umc_am_adminflags_default "z"
 
 // Flags required for admins to be able to select maps which would normally be excluded by UMC. If empty, all admins can select excluded maps.
 // -
@@ -23,7 +23,7 @@ sm_umc_am_adminflags_exclude ""
 // Default: "1"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
-sm_umc_am_allowduplicates "1"
+sm_umc_am_allowduplicates "0"
 
 // File to use for Ultimate Mapchooser's map rotation.
 // -
