Fixed an issues with map nomination display and the text display of the nomination in the chat. This should be corrected now.
Signed-off-by: Mr.Silence

--- a/cfg/sourcemod/ultimate-mapchooser.cfg
+++ b/cfg/sourcemod/ultimate-mapchooser.cfg
@@ -29,7 +29,7 @@ sm_umc_dontchange_display "0"
 // Default: "0"
 // Minimum: "0.000000"
 // Maximum: "1.000000"
-sm_umc_nomination_display "1"
+sm_umc_mapnom_display "1"
 
 // Specifies a server command to be executed when the map is extended by UMC.
 // -
@@ -55,7 +55,7 @@ sm_umc_logging_verbose "0"
 // String to replace the {NOMINATED} map display-template string with.
 // -
 // Default: "^"
-sm_umc_nomination_display "^"
+sm_umc_nommsg_display "^"
 
 // Determines where the Runoff Vote Message is displayed on the screen.
 //  C - Center Message
